Changement class libercourt en contenu

--- a/index_tpgit.html
+++ b/index_tpgit.html
@@ -46,7 +46,7 @@
                 <p>Petite ville de 10 000 habitants </p>
             </div>
             
-            <div id="Kevin2" class="Libercourt">
+            <div id="Kevin2" class="contenu">
                 <h2>Bethune</h2>
                 <img src="bethune.jpg" alt="Ville de Bethune">
                 <p> Ville de Bethune avec ses 20 000 habitants et son incroyable beffroi</p>
